edit view elem. texts/tags, readable duration, block crawlers, bug fix
- core.css: new edit view elements
- wisy-durchf-class.inc.php: new readable duration mapping (day-to-text)
- framework: function to read group settings in frontend (for edit view)
- wisy-robots-renderer.inc.php: block or slow down more crawlers
- wisy-search-renderer: bug fix 1:n-synonym OR-search
- wisy-edit-view: toggle visibility add. elements, getGrpSetting for
edit help text, include global tag black list
- admin/config/codes.inc.php: global $edit_tagid_blacklist

--- a/core51/core.css
+++ b/core51/core.css
@@ -433,13 +433,18 @@ input.wisy_hinted {
 	font-weight: normal;
 }
 
+
+.edit_hint_a, .edit_hint_b {
+  cursor: pointer;
+  text-decoration: none !important;
+}
+	
 .edit_hint_enable {
   color: #0F3B7F;
-  cursor: pointer;
 }
-.edit_hint_disable {
-  color: #888888;
-  cursor: pointer;
+.edit_hint_disable, .edit_hint_a.edit_hint_disable, .edit_hint_b.edit_hint_disable {
+  color: #555;
+  cursor: auto;  
 }
 
 a.wisy_help_hint {
@@ -448,6 +453,27 @@ a.wisy_help_hint {
  border: 2px solid #FAD163;
  padding: 1px 8px 1px 8px;
  font-weight: normal !important;
+}
+
+.wisyp_edit select {
+	min-width: 50%;
+}
+
+.wisyp_edit .editFoerderungDiv table td {
+	vertical-align: top;
+	text-align: left !important;
+}
+
+.wisyp_edit .edithinweis {
+	display: block;
+	margin-bottom: 1em;
+	color: #555;
+	font-size:.8em;
+}
+
+.wisyp_edit  .edithinweis small {
+	color: #555;
+	font-size:.8em;
 }
 
 /*******************************************************************************
